fix: Index form vertically out of bounds

--- a/src/dashboard/IndexManager/IndexForm.scss
+++ b/src/dashboard/IndexManager/IndexForm.scss
@@ -1,5 +1,5 @@
 .indexFormContainer {
-  max-height: calc(100vh - 200px);
+  max-height: calc(100vh - 270px);
   overflow-y: auto;
   overflow-x: hidden;
 
